Ensure that gray background shows up behind todolist items

--- a/HW2 React TodoList/src/css/todo_style.css
+++ b/HW2 React TodoList/src/css/todo_style.css
@@ -90,6 +90,9 @@ body {
   cursor: pointer;
 }
 #list_items_container {}
+#list_items_second_container {
+  background-color: var(--swatch-primary);
+}
 
 /* LIST SCREEN CLASSES */
 .list_item_card, .list_item_add_card {
